# andre_search

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: __main__.py  search.py
tests/: example.txt  test_search.py
