[project]
name = "andre_search"
version = "0.1"
description = "Search for a term in a source text file"
authors = [
    { name = "Andre Vauvelle", email = "vauvelleandre@gmail.com" }
]
keywords = ["search", "text", "command-line"]

[project.scripts]
andre_search = "search:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[options]
packages = "find:"
install_requires = [
    "argparse>=1.4.0",
    "setuptools==58.0.4",
    "pre-commit==2.15.0",
    "pytest==6.2.5",
]


[tool.black]
line-length = 79
target-version = ['py39']
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
